fixed issue withe editor overflow

--- a/CSS/editor.css
+++ b/CSS/editor.css
@@ -50,8 +50,9 @@
   margin-bottom: 0;
 }
 
-.editor-container {
+.editor-container  {
   display: flex;
+
   flex-direction: column;
   width: 100%;
   height: 70%;
@@ -144,7 +145,8 @@ button{
 }
 
 .editor {
-  display: block;
+  display: flex;
+  position: relative;
   width: 100%;
   height: 100%;
   margin-top: 0px;
@@ -201,6 +203,7 @@ div.left-pane::-webkit-scrollbar-thumb {
   background: #202424;
 }
 #edit-area{
+  position: absolute;
   height: 100%;
   width: 100%;
   margin: 0 0 0 0 ;
